<resources>

    <!-- Main_Acitivity -->
    <string name="ingame_app_name">MISSION CODE</string>
    <string name="first_page_traning_button">Entrainement</string>
    <string name="first_page_exam_button">Examen Blanc</string>
    <string name="first_page_info_button">i</string>
    <string name="app_logo">Logo_appli</string>

    <!-- Info_Acitivity -->
    <string name="title_information">Informations</string>
    <string name="info_page_text_part1">Application de code de la route</string>
    <string name="info_page_text_part2">Fait par le binôme:</string>
    <string name="info_page_text_part3">Sharan Varatharajah</string>
    <string name="info_page_text_part4">Saïd Salama</string>
    <string name="info_page_text_part5">&amp;</string>
    <string name="info_page_text_part6">Dans le cadre de l\'unité IHM</string>

    <!-- Theme_Choice_Acitivity -->
    <string name="title_theme_choice">Choix du thème</string>
    <string name="theme_description">Theme_Description</string>
    <string name="theme_number">Theme_number</string>
    <string name="todo">Theme_Logo</string>

    <!-- mainQuestionaireActivity -->
    <string name="reponse1">ReponseQuestion 1</string>
    <string name="reponse2">ReponseQuestion 2</string>
    <string name="reponse3">ReponseQuestion 3</string>
    <string name="reponse4">ReponseQuestion 4</string>
    <string name="QuestionTitle">Bla?</string>
    <string name="QuestionNumber">Numero question</string>
    <string name="NextButton">OK</string>
    <string name="score">Score</string>

    <!-- reponse1Activity -->
    <string name="imageduquizz">imageduquizz</string>
    <string name="reponse_1">Reponse 1</string>
    <string name="description_score">description_score</string>
    <string name="finish">Vroooom !!</string>

</resources>