<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="346dp"
        android:layout_height="87dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/ingame_app_name"
        android:textColor="#7B8D97"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/button_training_from_home_page"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintDimensionRatio="23:18"
        app:layout_constraintEnd_toEndOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button_training_from_home_page"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/baloo"
        android:text="@string/first_page_traning_button"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FFF"
        android:textSize="26sp"
        app:backgroundTint="#FF8C33"
        app:layout_constraintBottom_toTopOf="@+id/button_exam_from_home_page"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_exam_from_home_page"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/baloo"
        android:text="@string/first_page_exam_button"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FFF"
        android:textSize="26sp"
        app:backgroundTint="#FF8C33"
        app:layout_constraintBottom_toTopOf="@+id/button_info_from_home_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_training_from_home_page" />

    <Button
        android:id="@+id/button_info_from_home_page"
        android:layout_width="63dp"
        android:layout_height="62dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/baloo"
        android:text="@string/first_page_info_button"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:backgroundTint="#37454E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_exam_from_home_page" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>